force-app/main/default/objects/Subrule__c/Subrule__c.object-meta.xml
<CustomObject>
    <label>Subrule</label>
    <nameField>
        <displayFormat>SR-{00000000}</displayFormat>
        <label>Subrule</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subrules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>