force-app/main/default/objects/Subrule__c/fields/Alpha_Order__c.field-meta.xml
<CustomField>
    <fullName>Alpha_Order__c</fullName>
    <label>Alpha Order</label>
    <length>3</length>
    <type>Text</type>
</CustomField>