force-app/main/default/objects/Subrule__c/fields/Rule_Detail__c.field-meta.xml
<CustomField>
    <fullName>Rule_Detail__c</fullName>
    <label>Rule Detail</label>
    <referenceTo>Rule_Detail__c</referenceTo>
    <relationshipLabel>Subrules</relationshipLabel>
    <relationshipName>Subrules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>